# ganon

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile  PERFORMANCE_PLAN.md  ROUTING_README.md  docker-compose.yml  ganon_dissector.lua
.claude/projects/-home-arad-projects-ganon/memory/: MEMORY.md  documentation_sync.md
build-armv5/: CMakeCache.txt  Makefile  cmake_install.cmake  ganon
build-mips32be/: CMakeCache.txt  Makefile  cmake_install.cmake  ganon
build-x64/: CMakeCache.txt  Makefile  cmake_install.cmake  ganon
cmake/: armv5-musl-toolchain.cmake  armv5-toolchain.cmake  armv7-musl-toolchain.cmake  armv7-toolchain.cmake  mips32be-musl-toolchain.cmake  mips32be-toolchain.cmake  ppc-toolchain.cmake
ganon_client/: README.md  __init__.py  client.py  protocol.py  pyproject.toml  routing.py  skin.py  transport.py
ganon_client/ganon_client/: __init__.py
ganon_client/skins/: __init__.py  tcp_chacha20.py  tcp_monocypher.py  tcp_plain.py  tcp_ssh.py  tcp_tls12.py  tcp_tls13.py  tcp_xor.py  udp_quic.py  udp_quic2.py
include/: args.h  common.h  connection.h  err.h  loadbalancer.h  logging.h  network.h  network_caps.h  network_epoll.h  protocol.h  routing.h  session.h  skin.h  skins_config.h  skins_config.h.bak  transport.h  tunnel.h
include/skins/: skin_tcp_chacha20.h  skin_tcp_monocypher.h  skin_tcp_plain.h  skin_tcp_ssh.h  skin_tcp_tls12.h  skin_tcp_tls13.h  skin_tcp_xor.h  skin_udp_quic.h  skin_udp_quic2.h  tls_common.h
src/: CMakeLists.txt  args.c  connection.c  loadbalancer.c  logging.c  main.c  network.c  network_caps.c  network_epoll.c  protocol.c  routing.c  session.c  skin.c  transport.c  tunnel.c
src/skins/: ngtcp2_crypto_picotls_mbedtls.c  quic2_ngtcp2_crypto.c  quic2_ngtcp2_crypto.h  quic2_tls.c  quic2_tls.h  quic_ngtcp2_crypto.c  quic_ngtcp2_crypto.h  quic_tls.c  quic_tls.h  skin_tcp_chacha20.c  skin_tcp_monocypher.c  skin_tcp_plain.c  skin_tcp_ssh.c  skin_tcp_tls12.c  skin_tcp_tls13.c  skin_tcp_xor.c  skin_udp_quic.c  skin_udp_quic2.c  skin_udp_quic2_internal.h  skin_udp_quic2_stub.c  skin_udp_quic_internal.h  skin_udp_quic_stub.c  tls_common.c
